--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-navbar></app-navbar>/>
-
-<router-outlet></router-outlet>
+<div class ="container">
+  <div class ="main">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+  </div>
+</div>
