--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,37 @@
-<nav class ="stellar-navbar">
-  <div class="brand-name">
-    <a routerLink="/"> Student page</a>
-  </div>
-  <div class ="nav-links">
-    @if (authService.isLoggedIn()){
-      <button (click)="logout()">Logout</button>
-    }@else{
-      <a routerLink="/login">Login</a>
-    }
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"> Homeschooling to dreams...</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a
+        class="nav-link"
+        routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a
+        class="nav-link"
+        routerLink="/mo_hs_req">Missouri HS Requriments</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a
+        class="nav-link"
+        routerLink="/hourForm">Hours Tracked</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a
+        class="nav-link"
+        routerLink="/contact">Contact Us</a>
+      </li>
+      <div class ="nav-links">
+        @if (authService.isLoggedIn()){
+          <button (click)="logout()">Logout</button>
+        }@else{
+          <a routerLink="/login">Login</a>
+        }
+      </div>
+    </ul>
   </div>
 </nav>
