--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,12 @@
 <div class="image-container">
-<div class ="row">
+<div class ="login-container">
+    @if (isLoggingIn) {
+
 <form [formGroup]="loginForm" (ngSubmit)="login()">
   <div class="formGroup">
     <label for="username">Username</label>
     <input type="text" formControlName="username"
     maxlength="15">
-
   </div>
   <div class ="formGroup">
     <label for="password">Password</label>
@@ -13,24 +14,34 @@
     minlength="8"
     required>
   </div>
-  <div class="form-group d-flex justify-content-between">
-    <button
-    class="btn btn-primary mr-3"
-    type="submit"
-    [disabled]="!loginForm.valid"
-    >{{ isLoginMode ? "Login" : "Register" }}
-   </button>
-    <button
-    class="btn btn-sm btn-transparent text-primary "
-    type="button"
-    (click)="onSwitchAuthMode()"
-    >
-    Switch to {{ isLoginMode ? "Register" : " Login "}}
-  </button>
+  <button type="submit" [disabled]="!loginForm.valid">Login</button>
+</form>
+}
+
+@if (!isLoggingIn) {
+<form [formGroup]="signUpForm" (ngSubmit)="signup()">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" formControlName="username">
   </div>
-  </form>
-<p class="alert alert-danger mt-3" *ngIf="errorMsg">
-{{ errorMsg }}
-</p>
+  <div class="form-group">
+    <label for="first_name">First Name</label>
+    <input type="text" formControlName="first_name">
+  </div>
+  <div class="form-group">
+    <label for="last_name">Last Name</label>
+    <input type="text" formControlName="last_name">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" formControlName="password">
+  </div>
+  <div class="form-group">
+    <label for="password_confirmation">Confirm Password</label>
+    <input type="password" formControlName="password_confirmation">
+  </div>
+  <button type="submit" [disabled]="!signUpForm.valid">Login</button>
+</form>
+}
 </div>
 </div>
