--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form [formGroup]="signupForm" (ngsubmit)="onSignUp()">
+  <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
     <div class="form-group">
       <label for="first_name">First Name</label>
       <input type="text" formControlName="first_name">
