--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,22 +1,19 @@
-<nav class="navbar">
-  <div class="brand-name"> Homeschooling to dreams...</div>
-  <div class="sidebar">
-    <nav>
-      @if (authService.isLoggedIn()){
-        <a
-        routerLink="/"
-        routerLinkActive="active-link"
-        [routerLinkActiveOptions]="{ exact: true}">Home</a>
-        <a (click)="this.authService.logout()">Logout</a>
-      }@else {
-        <a routerLink="/login">Login</a>
-        <br>
-        <a routerLink="/signup">Signup</a>
-      }
-    </nav>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+<header class="header">
+  <div class="nav-container">
+      <span class="logo">NavBar</span>
+      <nav class="nav">
+          <ul class="nav--ul__one">
+              <li class="nav-link"><a href="#">Home</a></li>
+              <li class="nav-link"><a href="#">Contact</a></li>
+              <li class="nav-link"><a href="#">Missouri_highschool_requiremnets</a></li>
+          </ul>
+          <ul class="nav--ul__two">
+              <li class="nav-link"><a href="#">Login</a></li>
+              <li class="nav-link"><a href="#">Signup</a></li>
+          </ul>
+      </nav>
+      <span class="hamburger-menu  material-symbols-outlined">Menu</span>
   </div>
-  <div class="sidebar" [class.active]="isSidebarVisible">
-    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <br>
-      <a routerLink="/mo_hs_req" routerLinkActive="active">Missouri HS Requirements</a>
-  </div>
+</header>
