--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div class ="container">
-  <div class ="main">
-    <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<app-navbar/>
+<router-outlet/>
