--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,12 +1,15 @@
+<div class="image-container">
 <div class ="container">
   <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="form-group">
       <label for="username">Username</label>
+      <br>
       <input type="text" formControlName="username"
       maxlength="15">
     </div>
     <div class ="form-group">
       <label for="password">Password</label>
+      <br>
       <input type="password" formControlName="password"
       minlength="8"
       required>
@@ -17,4 +20,5 @@
   }
     <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
+</div>
 </div>
