--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,23 +1,29 @@
+<div class="image-container">
 <div class="container">
   <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
     <div class="form-group">
       <label for="first_name">First Name</label>
+      <br>
       <input type="text" formControlName="first_name">
     </div>
     <div class="form-group">
       <label for="last-name">Last Name</label>
+      <br>
       <input type="text" formControlName="last_name">
     </div>
     <div class="form-group">
       <label for="username">Username</label>
+      <br>
       <input type="text" formControlName="username">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
+      <br>
       <input type="password" formControlName="password">
     </div>
     <div class="form-group">
       <label for="password_confirmation">Confirm Password</label>
+      <br>
       <input type="password" formControlName="password_confirmation">
     </div>
     @for (error of errors; track $index) {
@@ -26,4 +32,5 @@
 
     <button type="submit">Sign Up</button>
   </form>
+</div>
 </div>
