--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -1,13 +1,25 @@
+.image-container{
+  background-image: url(
+    "https://vni.s3.amazonaws.com/200316153338383.jpg"
+  );
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 10px 10px 2px gray;
+  padding: 8%;
+}
 form {
-  max-width: 400px;
+  max-width: 500px;
   margin: 2rem auto;
   padding: 2rem;
   background-color: #f9f9f9;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  filter: opacity(90%);
+
 }
 
 input[type='text'],
@@ -23,7 +35,7 @@ input[type='password'] {
 
 input[type='text']:focus,
 input[type='password']:focus {
-  border-color: #007bff;
+  border-color: #4D4DDB;
   outline: none;
 }
 
@@ -31,7 +43,7 @@ button[type='submit'] {
   padding: 0.75rem;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
+  background-color: #4D4DDB;
   color: white;
   font-size: 1rem;
   font-weight: bold;
@@ -40,5 +52,5 @@ button[type='submit'] {
 }
 
 button[type='submit']:hover {
-  background-color: #0056b3;
+  background-color: #be05cfb8;
 }
