--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,10 +6,12 @@
   background-position: center;
   max-width: 100%;
   max-height: 100%;
-  padding: 15%
+  padding: 20%
 }
-h4{
-  color:whitesmoke
+h1{
+  color:whitesmoke;
+  text-shadow: 1px 1px black;
+  text-decoration: underline;
 }
 p{
   color: whitesmoke;
