--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,18 +2,19 @@
 
 <header class="header">
   <div class="nav-container">
-      <span class="logo">NavBar</span>
+      <span class="logo">Homeschool Life...</span>
       <nav class="nav">
           <ul class="nav--ul__one">
               <li class="nav-link"><a href="#">Home</a></li>
-              <li class="nav-link"><a href="#">Contact</a></li>
-              <li class="nav-link"><a href="#">Missouri_highschool_requiremnets</a></li>
+              <li class="nav-link"><a href="hours">Courses</a></li>
+              <li class="nav-link"><a href="contact">Contact Us</a></li>
+              <li class="nav-link"><a href="mo_hs_req">Requirements</a></li>
           </ul>
+          <br>
           <ul class="nav--ul__two">
-              <li class="nav-link"><a href="#">Login</a></li>
-              <li class="nav-link"><a href="#">Signup</a></li>
+              <li class="nav-link"><a href="login">Login</a></li>
+              <li class="nav-link"><a href="signup">Signup</a></li>
           </ul>
       </nav>
-      <span class="hamburger-menu  material-symbols-outlined">Menu</span>
   </div>
 </header>
