FEAT updated the signin req
Had to make a new api so had to update the front end as well. Also was able to deploy successfully

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,21 +7,27 @@
   action="https://formsubmit.co/ab4ab8c18207b9013c6aed9e5583250a"
   method="POST">
     <div class="form-group">
-  <label for="Email">Email</label>
+  <label for="Email">Email:</label>
+  <br>
   <input type="email" class="form-control" name="Email" aria-describedby="emailHelp" placeholder="Enter email"
   required>
+  <br>
   <div id="emailHelp" class="small"
   >We'll never share your email with anyone else.</div>
   </div>
+  <br>
   <div class="form-group">
-  <label for="fullname">Full Name</label>
+  <label for="fullname">Full Name:</label>
+  <br>
   <input type="text" class="form-control" name="Fullname" placeholder="Full Name" formControlName="Fullname"
   required>
   </div>
+  <br>
   <div class="form-group col-md-12">
   <label for="comment">Comment or Questions?</label>
+  <br>
   <textarea class="form-control" formControlName="Comment" name="Comment"
-  rows="3"
+  rows="6"
   required></textarea>
   </div>
   <div class="col-md-12">
