--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,12 +4,13 @@
       <div class="col">
   <h1> Homeschool Life </h1>
 <br>
-<p> Welcome to a new way of schooling. Homeschool life is more than books and tests. It bring everyday learning and incorporates it into life skills to help your child be succussful both academically and in life.
+<p class="paragraph"> Welcome to a new way of schooling. Homeschool life is more than books and tests. It bring everyday learning and incorporates it into life skills to help your child be succussful both academically and in life.
 <br>
 <br>
-<br>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore harum quis dignissimos reprehenderit fugit eveniet nam libero in laboriosam numquam expedita, odio quisquam illo, magnam nulla dolor optio illum minima. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, libero ex autem praesentium, soluta eos nisi tenetur nihil cupiditate tempora distinctio deserunt deleniti et hic sed excepturi obcaecati nemo repellat?
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus sed, tempora nesciunt earum neque voluptates officia nemo ab corporis voluptate, quisquam perspiciatis laudantium assumenda voluptas ducimus voluptatem eveniet ut ipsa.
+  Homeschool can either be religous basesd or not based on what fits your family values. Homeschool can be all on the computer or all work books as well as a combination of both. This is almost complete freedom when it comes to your childs education. Every child is different in what they need to be successful and this allows you to tailor thier education to what they need. Homeschool life will not look the same for everyone as in the set up or how everyday fuctions and that is ok.
+  <br>
+  <br>
+    Make sure to check out the requirements for the sate you reside in when it comes to the Homeschool laws and regualtions. In the requirements tab is the ones for Missouri as well as some resourses. If you have any questions or suggestions make sure to click on 'Contact Us' above. Congratualtions on making this journey into the Homeschool world it is what you make of it!
 </p>
 </div>
 </div>
