--- a/src/app/hours/hours.component.html
+++ b/src/app/hours/hours.component.html
@@ -28,8 +28,12 @@
       </p>
       </div>
 
-      <div class="task">
+      <div class="task-math">
+        <!-- @for (task of tasks; track task.id) {
+
+        } -->
         <p>Math Classes</p>
+
       </div>
       <div class="task">
         <p> History Classes</p>
