--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -2,14 +2,9 @@
 <div class="container">
   <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
     <div class="form-group">
-      <label for="first_name">First Name</label>
+      <label for="email">Email</label>
       <br>
-      <input type="text" formControlName="first_name">
-    </div>
-    <div class="form-group">
-      <label for="last-name">Last Name</label>
-      <br>
-      <input type="text" formControlName="last_name">
+      <input type="text" formControlName="email">
     </div>
     <div class="form-group">
       <label for="username">Username</label>
@@ -29,7 +24,6 @@
     @for (error of errors; track $index) {
       <p class="error">{{ error }}</p>
     }
-
     <button type="submit">Sign Up</button>
   </form>
 </div>
