--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -41,7 +41,7 @@ input[type='password']:focus {
 
 button[type='submit'] {
   padding: 0.75rem;
-  border: none;
+  border: 2px solid black;
   border-radius: 4px;
   background-color: #4D4DDB;
   color: white;
