--- a/src/app/mo-hs-req/mo-hs-req.component.scss
+++ b/src/app/mo-hs-req/mo-hs-req.component.scss
@@ -1,47 +1,33 @@
 .image-container{
   background-image: url(
-    "https://stormhighway.com/thumbsl/e-2470.jpg"
+    "https://www.transcriptmaker.com/wp-content/uploads/2017/08/NEW-TM-PHOTO-3.jpg"
+
   );
-  background-size: cover;
-  background-position: center;
+  background-size:auto;
   max-width: 100%;
   max-height: 100%;
   filter: grayscale(50%);
 }
-h4{
+h2{
   color:whitesmoke;
   text-shadow: 2px 2px rgb(0, 0, 0);
   text-align: center;
+  font-size: 1.5rem;
+  letter-spacing: .8px;
+
 }
 ul{
   color: whitesmoke;
   text-shadow: 1px 1px black;
+  text-align: left;
+  line-height: 40px;
+  font-size: 1.2rem;
 }
-.law{
+.paragraph{
   color:black;
   font-weight: 450;
   font-size: 16px;
-  background: rgba(245, 245, 245, 0.316);
+  background: rgba(245, 245, 245, 0.624);
   padding: 3%;
 }
-.public{
-  color:black;
-  font-weight: 450;
-  font-size: 16px;
-  background: rgba(245, 245, 245, 0.316);
-  padding: 3%;
-}
-.college{
-  color:black;
-  font-weight: 450;
-  font-size: 16px;
-  background: rgba(245, 245, 245, 0.316);
-  padding: 3%;
-}
-.transcripts{
-  color:black;
-  font-weight: 450;
-  font-size: 16px;
-  background: rgba(245, 245, 245, 0.316);
-  padding: 3%;
-}
+
