FEAT Class/course functions
Added classes/courses to the table to expand and view them in each category

--- a/src/app/hours/hours.component.html
+++ b/src/app/hours/hours.component.html
@@ -23,38 +23,151 @@
 
       <!-- Class / Credit Elements-->
       <div class="task">
-      <p>
-        <a routerLink="/elective" > Elective Classes </a>
-      </p>
+        <details>
+          <summary> Elective Classes</summary>
+          <ul>
+            <li> STEM 1: Intro to Coding (1.0)</li>
+            <li> STEM 2: JavaScript (1.0)</li>
+            <li> STEM 3: Electronics and Coding (1.0)</li>
+            <li> Intro to Java (1.0)</li>
+            <li>AP Computer Science A (1.0)</li>
+            <li>AP Computer Science Prin. (1.0)</li>
+            <li>Fundamentals of Design (1.0)</li>
+          </ul>
+        </details>
       </div>
 
-      <div class="task-math">
-        <!-- @for (task of tasks; track task.id) {
+      <div class="task">
+        <details>
+          <summary> Math </summary>
+          <ul>
+            <li>Pre-Algebra (1.0)</li>
+            <li>Algebra (1.0)</li>
+            <li>Geometry (1.0)</li>
+            <li>Algrbra II (1.0)</li>
+            <li>Trigonometry (0.5)</li>
+            <li>College Exam Math Prep (0.5)</li>
+            <li>Pre-Calculus (1.0)</li>
+            <li>AP Calculus AB (1.0)</li>
+            <li>AP Calculus BC (1.0)</li>
+            <li>AP Statistics (1.0)</li>
+            <li>Business Math (1.0)</li>
+            <li>FUNdamental Math - Spanish (1.0)</li>
+            <li>Algebra I - Spanish (1.0)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary>History/Social Studies</summary>
+          <ul>
+            <li>United States History (1.0)</li>
+            <li>AP US History (1.0)</li>
+            <li>World History (1.0)</li>
+            <li>World Geography (1.0)</li>
+            <li>AP World Geography (1.0)</li>
+            <li>US Government and Civis (0.5)</li>
+            <li>Economics (1.0)</li>
+            <li>AP Eurpoean History (1.0)</li>
+            <li>Personal Finance (0.5)</li>
+            <li>Psycholohy (1.0)</li>
+            <li>AP Psycholohy (1.0)</li>
+            <li>Epic Moments in World History (1.0)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary>English/ Language Arts</summary>
+            <ul>
+              <li>English I (1.0)</li>
+              <li>English II (1.0)</li>
+              <li>American Lit. - English III (1.0)</li>
+              <li>Brititsh Lit. - English IV (1.0)</li>
+              <li>College Prep - English IV (1.0)</li>
+              <li>AP Eng. Literature & Comp. (1.0)</li>
+            </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary>Science </summary>
+          <ul>
+            <li>Physical Science (1.0)</li>
+            <li>Intro to Physics & Chemistry (1.0)</li>
+            <li>Biology (1.0)</li>
+            <li>AP Biology (1.0)</li>
+            <li>General Chemistry (1.0)</li>
+            <li>AP Chemistry (1.0)</li>
+            <li>General Physics (1.0)</li>
+            <li>Honors Physics (1.0)</li>
+            <li>AP Physics I (1.0)</li>
+            <li>Environmental Science (1.0)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary> Foreign Language</summary>
+          <ul>
+            <li>Discover Spanish (1.0)</li>
+            <li>Discover Portuguese (1.0)</li>
+            <li>French I (1.0)</li>
+            <li>French II (1.0)</li>
+            <li>German I (1.0)</li>
+            <li>German II (1.0)</li>
+            <li>Spanish I (1.0)</li>
+            <li>Spanish II (1.0)</li>
+            <li>Spanish III (1.0)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary> Fine Arts</summary>
+          <ul>
+            <li>Music Appreciation (1.0)</li>
+            <li>AP Music Theory (1.0)</li>
+            <li>AP Drawing (1.0)</li>
+            <li>Collaborative Theatre (1.0)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary> Heatlth/ P.E. </summary>
+          <ul>
+            <li>High School Health (1.0)</li>
+            <li>High School Social Development - Level 1 (1.0)</li>
+            <li>High School Social Skills - Level 2 (1.0)</li>
+            <li>PE, Social & Emotional Education (0.5)</li>
+          </ul>
+        </details>
+      </div>
+      <div class="task">
+        <details>
+          <summary>Career & Technical Education</summary>
+          <ul>
+            <li>Business Management (1.0)</li>
+            <li>Electrical Technology I (1.0)</li>
+            <li>Electrical Technology III (1.0)</li>
+            <li>HVAC-R I (1.0)</li>
+            <li>HVAC-R II (1.0)</li>
+            <li>Info Management I (1.0)</li>
+            <li>Info Management II (1.0)</li>
+            <li>Medical Terminology (1.0)</li>
+            <li>Plumbing Technology I (1.0)</li>
+            <li>Plumbing Technology II (1.0)</li>
+            <li>Intro to Accounting (1.0)</li>
+            <li>Accounting I (1.0)</li>
+            <li>Accounting II (1.0)</li>
+            <li>Business, Marketing & Fin. (1.0)</li>
+            <li>Investigating Careers (1.0)</li>
+            <li>College & Career Readiness (1.0)</li>
+            <li>Instructional Standards in Edu. (1.0)</li>
+          </ul>
 
-        } -->
-        <p>Math Classes</p>
-
-      </div>
-      <div class="task">
-        <p> History Classes</p>
-      </div>
-      <div class="task">
-        <p> English Classes</p>
-      </div>
-      <div class="task">
-        <p> Science Classes</p>
-      </div>
-      <div class="task">
-        <p> Foreign Language Classes</p>
-      </div>
-      <div class="task">
-        <p> Fine Arts Classes</p>
-      </div>
-      <div class="task">
-        <p> Health/P.E. Classes</p>
-      </div>
-      <div class="task">
-        <p> Practical Arts Classes</p>
+        </details>
       </div>
        <!--
       <button class="button is-primary"
