FEAT added awards
Added awards page to allow users/parents to add in images and files

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,6 +9,8 @@
               <li class="nav-link"><a href="hours">Courses</a></li>
               <li class="nav-link"><a href="contact">Contact Us</a></li>
               <li class="nav-link"><a href="mo_hs_req">Requirements</a></li>
+              <li class="nav-link"><a
+              href="awards">Awards</a></li>
           </ul>
           <ul class="nav--ul__two">
               <li class="nav-link"><a href="login">Login</a></li>
