--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,7 +15,7 @@ h1{
   font-size: 28px;
   letter-spacing: 1px;
 }
-.paragraph{
+p{
   color:black;
   text-shadow: 1.5px 1.5px whitesmoke;
   font-weight: 450;
