--- a/src/app/hours/hours.component.scss
+++ b/src/app/hours/hours.component.scss
@@ -1,9 +1,11 @@
 .centered-content {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 100%;
+  padding: 25px;
+
 }
 .task-manager-container{
   display: flex;
@@ -17,13 +19,14 @@
   flex-direction: column;
   width: 350px;
   background: whitesmoke;
-  padding: 42px;
+  padding: 25px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
 
 .list-menu{
   display: flex;
+  align-items: center;
   flex-direction: column ;
   flex-grow: 1;
   background: whitesmoke;
@@ -45,7 +48,7 @@
   background: whitesmoke;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
-  padding: 42px;
+  padding: 25px;
 }
 .title{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
